Fix Makefile, slightly modify text, add .pdf

--- a/TP/tp-simd/tp2_src_etd/Makefile
+++ b/TP/tp-simd/tp2_src_etd/Makefile
@@ -1,5 +1,5 @@
 SHELL=/bin/bash
-CFLAGS=-O3 -Wall -march=core2 # pcserveur est un sandybridge,  vérifier sur les machines de la salle de TP
+CFLAGS=-O3 -Wall -march=native # native = on cible la machine sur laquelle on compile. Attention cependant, certaines vieilles machines n'auront peut-être pas toutes les extensions que vous souhaitez utiliser
 CONV=conv-int
 OBJS=huffman.o idct.o iqzz.o main.o screen.o skip_segment.o unpack_block.o upsampler.o
 
@@ -9,19 +9,19 @@ all :
 	@gawk -F : '/^mjpeg/{print "make", $$1}' Makefile
 
 mjpeg-float : conv-float.o $(OBJS)
-	gcc -Bstatic -o $@ $^ -lSDL
+	gcc -no-pie -Bstatic -o $@ $^ -lSDL
 
 mjpeg-int : conv-int.o $(OBJS)
-	gcc -Bstatic -o $@ $^ -lSDL
+	gcc -no-pie -Bstatic -o $@ $^ -lSDL
 
 mjpeg-mmx : conv-mmx.o $(OBJS)
-	gcc $(CFLAGS) -Bstatic -o $@ $^ -lSDL
+	gcc -no-pie $(CFLAGS) -Bstatic -o $@ $^ -lSDL
 
 mjpeg-conv-unrolled4-float-a-trou : conv-unrolled4-float-a-trou.o $(OBJS)
-	gcc $(CFLAGS) -Bstatic -o $@ $^ -lSDL
+	gcc -no-pie $(CFLAGS) -Bstatic -o $@ $^ -lSDL
 
 mjpeg-conv-sse-a-trou : conv-sse-a-trou.c $(OBJS)
-	gcc $(CFLAGS) -Bstatic -o $@ $^ -lSDL
+	gcc -no-pie $(CFLAGS) -Bstatic -o $@ $^ -lSDL
 
 realclean : clean
 	rm -f mjpeg-float mjpeg-int mjpeg-mmx mjpeg-unrolled4-float-a-trou mjpeg-conv-sse-a-trou
