Adding rule to generate pdfs from svgs

--- a/TP/tp-bp/sujet/Makefile
+++ b/TP/tp-bp/sujet/Makefile
@@ -1,7 +1,16 @@
 PDFLATEX=pdflatex --shell-escape
+SVG=$(wildcard figures/*.svg)
+PDF=$(SVG:%.svg=%.pdf)
+
 .PHONY: all clean
-all tp-branch.pdf : tp-branch.tex
+
+%.pdf : %.svg
+	inkscape --export-filename=$@ $<
+
+all: tp-branch.pdf
+
+tp-branch.pdf : tp-branch.tex $(PDF)
 	$(PDFLATEX) $<
 
-clean:
+clean :
 	$(RM) tp-branch.pdf
