--- a/TP/tp-simd/tp2_src_etd/Makefile
+++ b/TP/tp-simd/tp2_src_etd/Makefile
@@ -9,19 +9,19 @@ all :
 	@gawk -F : '/^mjpeg/{print "make", $$1}' Makefile
 
 mjpeg-float : conv-float.o $(OBJS)
-	gcc -Bstatic -o $@ $^ -lSDL
+	gcc -o $@ $^ -lSDL
 
 mjpeg-int : conv-int.o $(OBJS)
-	gcc -Bstatic -o $@ $^ -lSDL
+	gcc -o $@ $^ -lSDL
 
 mjpeg-mmx : conv-mmx.o $(OBJS)
-	gcc $(CFLAGS) -Bstatic -o $@ $^ -lSDL
+	gcc $(CFLAGS) -o $@ $^ -lSDL
 
 mjpeg-conv-unrolled4-float-a-trou : conv-unrolled4-float-a-trou.o $(OBJS)
-	gcc  $(CFLAGS) -Bstatic -o $@ $^ -lSDL
+	gcc $(CFLAGS) -o $@ $^ -lSDL
 
 mjpeg-conv-sse-a-trou : conv-sse-a-trou.c $(OBJS)
-	gcc  $(CFLAGS) -Bstatic -o $@ $^ -lSDL
+	gcc $(CFLAGS) -o $@ $^ -lSDL
 
 realclean : clean
 	rm -f mjpeg-float mjpeg-int mjpeg-mmx mjpeg-conv-unrolled4-float-a-trou mjpeg-conv-sse-a-trou
